<resources>
    <string name="app_name">IHealth Application</string>
    <string name="halo_ges">Halo ges</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_name">Ashalina Zahira Dinda</string>
    <string name="search">Search</string>
    <string name="text_explain">What do you need?</string>
    <string name="calming_sounds">Calming Sounds</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="health_information">Health Information</string>
    <string name="calming_desc">Calming sounds to relax your body, mind, and calm your heart whenever you listen</string>
    <string name="hospital_tracker">Hospital Tracker</string>
    <string name="text_all">All</string>
    <string name="text_near_you">Near You</string>
    <string name="text_recommended">Recommended</string>
    <string name="rsud_kota_bogor">RSUD Kota Bogor</string>
    <string name="bogor">Bogor</string>
    <string name="rs_karya_bhakti_pratiwi">RS Karya Bhakti Pratiwi</string>
    <string name="health_infromation">Health Infromation</string>
    <string name="medical_supply">Medical Supply</string>
    <string name="location">Location: </string>
    <string name="phone_number">Phone Number:</string>
    <string name="link">http://rsudkotabogor.org/web/</string>
    <string name="medical_services">Medical Services</string>
    <string name="facilities">Facilities</string>
    <string name="doctor">Doctor</string>
    <string name="see_on_google_maps">See on Google maps</string>
    <string name="image_view">Image View</string>
    <string name="mask">Mask</string>
    <string name="popular">Popular</string>
    <string name="semua">Semua</string>
    <string name="terdekat">Terdekat</string>
    <string name="terbaru">Terbaru</string>
    <string name="masker_medis">Masker Medis</string>
    <string name="dikirim">Dikirim dari Jakarta</string>
    <string name="harga">Rp. 3000</string>
    <string name="buy_now">Buy Now</string>
    <string name="forgot">Forgot</string>
    <string name="your_password">your password?</string>
    <string name="please_fill_the_input_below">please fill the input below</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">forgot password?</string>
    <string name="register">Register</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">iHealth</string>
    <string name="register_btn">REGISTER</string>
    <string name="skip">skip</string>
    <string name="onboarding1_text">simplify your healthy needs with the features that available in this application</string>
    <string name="onboarding2_text">we make sure your order safe and and quickly get to your house as soon as possible</string>
    <string name="onboarding3_text">We make it easy for you to find a hospital that is trusted and near your location</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="telp">08952279****</string>
    <string name="name_username">shalinaazd</string>
    <string name="profile_name">Ashalina Zahira Dinda Akbari</string>
    <string name="username">Username: </string>
    <string name="name_email">ashalinaadinda@gmail.com</string>
    <string name="indonesia">Indonesia</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="medical_supply_desc">Buy your medical needs and other health needs that we have provided, guaranteed safe, and reliable</string>
    <string name="health_info_desc">Trusted information about health information that you can read at any time</string>
    <string name="hospital_track_desc">You don\'t have to worry about finding a trusted hospital that close to your location</string>
    <string name="sleep_tracker_desc">With the sleep tracker, your sleep time becomes more organized, so you don\'t forget your health</string>
    <string name="btn_start_tracking">Start Tracking</string>
</resources>