<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding2Activity">

    <ImageView
        android:id="@+id/iv_onboarding2_pict"
        android:layout_width="302dp"
        android:layout_height="271dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding2_pict" />

    <ImageButton
        android:id="@+id/ib_onboarding2_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding2_text"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding2_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding2_text"
        app:srcCompat="@drawable/onboarding2_dot" />

    <TextView
        android:id="@+id/tv_onboarding2_text"
        android:layout_width="339dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:text="@string/onboarding2_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_onboarding2_pict"
        app:layout_constraintStart_toStartOf="@+id/iv_onboarding2_pict"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding2_pict" />

    <TextView
        android:id="@+id/tv_onboarding2_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="32dp"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_onboarding2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/ic_arrownext"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toEndOf="@+id/tv_onboarding2_skip" />

</androidx.constraintlayout.widget.ConstraintLayout>